--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,6 +106,16 @@ body {
   &__col {
     flex: 0 0 25%;
     max-width: 25%;
+
+    @media (max-width: 768px) {
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
+
+    @media (max-width: 480px) {
+      flex: 0 0 100%;
+      max-width: 100%;
+    }
   }
 
   &__item {
@@ -231,7 +241,7 @@ body {
     }
   }
   &__line {
-    background-color: #fff;
+    background-color: #000;
     display: block;
     height: 2px;
     left: 0;
